--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="i0H-dV-Z6H" id="p8D-gg-Sf2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="WRr-dP-DUk"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="WRr-dP-DUk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FfA-yT-eZ5">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonTapped:" destination="i0H-dV-Z6H" id="AhK-gK-D1u"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5RX-bo-42E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
